# office-tools

./: .gitignore  README.md  README_zh-CN.md  Tauri2.0 轻量化办公文档工具箱 - 开发需求文档.md  index.html  package-lock.json  package.json  tailwind.config.js  test_recon.py  vite.config.ts
.trae/documents/: implementation-plan.md  office-toolbox-plan.md  office-tools-dev-plan.md  type-error-fix-plan.md
config/: printer_cache.json
scripts/: build-release.js  create-default-icon.js  generate-icons.js
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  gen_ico.py  gen_icons.py  gen_icons.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/libreoffice/: README.txt
src-tauri/src/: lib.rs  main.rs  ocr_model.rs
src-tauri/src/commands/: codec.rs  encoding.rs  file.rs  hash.rs  image.rs  mod.rs  pdf.rs  print.rs  qrcode.rs
src/assets/styles/: main.css
src/components/: FileUploader.vue  OCRModelManager.vue  PreviewPanel.vue  PrintPanel.vue
src/components/common/: ActionBar.vue  DetachablePreview.vue  ExcelPreview.vue  FileDropZone.vue  ImagePreview.vue  ToolLayout.vue  WordPreview.vue
src/components/layout/: AppFooter.vue  AppHeader.vue  AppSidebar.vue  MainLayout.vue  PreviewPanel.vue  Sidebar.vue  TitleBar.vue
src/components/print/: PrintPreview.vue
src/composables/: useDocxEdit.ts  useDragDrop.ts  useFileOperation.ts  useFileReader.ts  useNotification.ts  useSettings.ts  useTheme.ts
src/data/: excelFunctions.ts  excelShortcuts.ts  wordShortcuts.ts
src/router/: index.ts
src/stores/: app.ts  ocrModel.ts  print.ts  setting.ts  settings.ts  task.ts
src/styles/: global.css  index.css
src/utils/: excelUtils.ts  ocrUtils.ts  pdfUtils.ts  tauriUtils.ts  wordUtils.ts
src/views/: BatchRename.vue  EncodingConvert.vue  Excel.vue  Home.vue  HomeView.vue  OCR.vue  PDF.vue  PdfTools.vue  Print.vue  Settings.vue  TaskQueue.vue  Toolbox.vue  Tools.vue  Word.vue  WordTools.vue
src/views/calculate/: BaseConvert.vue  TimestampConvert.vue  UuidGenerator.vue
src/views/codec/: Base64Codec.vue  HashCalc.vue  UnicodeCodec.vue  UrlCodec.vue
src/views/convert/: EncodingConvert.vue  ExcelConvert.vue  MarkdownConvert.vue
src/views/excel/: ExcelConditionalFormat.vue  ExcelDataProcess.vue  ExcelDataValidation.vue  ExcelFormulaGenerator.vue  (+3 more)
(+29 files in other folders)
