[package]
name = "light-office-tools"
version = "1.0.0"
description = "轻量化办公文档工具箱"
authors = ["you"]
edition = "2021"

[lib]
name = "light_office_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.34"
image = "0.25"
qrcode = "0.14"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
base64 = "0.22"
encoding_rs = "0.8"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
calamine = "0.26"
winapi = { version = "0.3", features = [
    "winspool",
    "wingdi",
    "winuser",
    "windef",
    "winbase",
    "errhandlingapi",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
